<resources>
    <string name="app_name">ASC</string>
    <string name="AuthorName">Hilex</string>
    <string name="defaultPhone">--</string>
    <string name="save">保存</string>
    <string name="cancel">取消</string>
    <string name="name">姓名</string>
    <string name="phone">电话</string>
    <string name="delete">删除</string>
    <string name="receiver">收信人</string>
    <string name="content">内容</string>
    <string name="send">发送短信</string>
    <string name="unknown">----</string>
    <string name="add">写一条动态吧~</string>
    <string name="ok">OK</string>
</resources>