<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00000000">

    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="450sp"
        android:background="@drawable/border_transparent"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5sp"
        android:layout_marginStart="5sp"
        android:layout_marginEnd="5sp">

        <ImageView
            android:id="@+id/imageView_targetNumber"
            android:layout_width="35sp"
            android:layout_height="35sp"
            android:background="@drawable/phonenumber"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="7sp"
            android:layout_marginTop="8sp"/>

        <TextView
            android:id="@+id/textView_targetNumber"
            android:layout_width="wrap_content"
            android:layout_height="40sp"
            android:text="@string/receiver"
            android:textSize="20sp"
            android:layout_toEndOf="@+id/imageView_targetNumber"
            android:gravity="center"
            android:layout_marginTop="5sp"
            android:layout_marginStart="5sp"/>

        <EditText
            android:id="@+id/editText_targetNumber"
            android:layout_width="250sp"
            android:layout_height="40sp"
            android:layout_toEndOf="@+id/textView_targetNumber"
            android:layout_marginStart="5sp"
            android:layout_marginTop="5sp"/>

        <ImageView
            android:id="@+id/imageView_content"
            android:layout_width="35sp"
            android:layout_height="35sp"
            android:background="@drawable/content"
            android:layout_below="@+id/imageView_targetNumber"
            android:layout_alignParentStart="true"
            android:layout_marginStart="7sp"
            android:layout_marginTop="10sp"/>

        <TextView
            android:id="@+id/textView_content"
            android:layout_width="wrap_content"
            android:layout_height="40sp"
            android:layout_toEndOf="@+id/imageView_content"
            android:layout_below="@+id/imageView_targetNumber"
            android:layout_marginStart="5sp"
            android:layout_marginTop="12sp"
            android:text="@string/content"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/editText_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView_content"
            android:layout_marginTop="10sp"
            android:layout_marginStart="5sp"
            android:layout_marginEnd="5sp"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top"
        android:layout_marginTop="15sp"
        android:gravity="center">

        <Button
            android:id="@+id/button_sendText"
            android:layout_width="140sp"
            android:layout_height="48sp"
            android:gravity="center"
            android:background="@drawable/ripple_white_blue"
            android:text="@string/send"
            android:textSize="23sp"
            android:textStyle="bold"/>

    </RelativeLayout>

</RelativeLayout>
