<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tab_domain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#00000000">

    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_white_transparent"
        android:gravity="center_horizontal">

        <RelativeLayout
            android:id="@+id/layout_head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="5sp"
            android:gravity="center_horizontal">

            <com.example.asc.activity.ui.CircleImageView
                android:id="@+id/head"
                android:layout_width="50sp"
                android:layout_height="50sp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="7sp"
                android:background="@drawable/haed_boy"/>
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_head">

            <ImageView
                android:id="@+id/imageView_name"
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:background="@drawable/name"
                android:layout_alignParentTop="true"
                android:layout_marginTop="5sp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="57sp" />

            <EditText
                android:id="@+id/editText_name"
                android:layout_width="230sp"
                android:layout_height="50sp"
                android:layout_toEndOf="@+id/imageView_name"
                android:layout_marginStart="7sp"
                android:hint="@string/name"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_name"
            android:layout_marginTop="3sp">

            <ImageView
                android:id="@+id/imageView_phone"
                android:layout_width="40sp"
                android:layout_height="40sp"
                android:background="@drawable/phonenumber"
                android:layout_alignParentTop="true"
                android:layout_marginTop="5sp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="57sp" />

            <EditText
                android:id="@+id/editText_phone"
                android:layout_width="230sp"
                android:layout_height="50sp"
                android:layout_toEndOf="@+id/imageView_phone"
                android:layout_marginStart="7sp"
                android:hint="@string/phone"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_phone"
            android:background="@drawable/border_transparent"
            android:layout_marginTop="10sp">

            <ImageButton
                android:id="@+id/imageView_cancel"
                android:layout_marginTop="7sp"
                android:layout_width="28sp"
                android:layout_height="28sp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="30sp"
                android:background="@drawable/cancel"
                android:layout_marginBottom="7sp"
                android:onClick="onClickCancel"/>

            <TextView
                android:id="@+id/textView_cancel"
                android:layout_width="wrap_content"
                android:layout_marginTop="7sp"
                android:layout_height="30sp"
                android:layout_toEndOf="@+id/imageView_cancel"
                android:layout_marginStart="7sp"
                android:text="@string/cancel"
                android:gravity="center"
                android:textSize="17sp"
                android:onClick="onClickCancel"/>

            <ImageButton
                android:id="@+id/imageView_save"
                android:layout_width="35sp"
                android:layout_height="35sp"
                android:layout_marginTop="7sp"
                android:layout_toStartOf="@+id/textView_save"
                android:layout_marginEnd="7sp"
                android:background="@drawable/save"
                android:onClick="onClickSave"/>

            <TextView
                android:id="@+id/textView_save"
                android:layout_width="wrap_content"
                android:layout_marginTop="7sp"
                android:layout_height="30sp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="30sp"
                android:text="@string/save"
                android:gravity="center"
                android:textSize="17sp"
                android:layout_marginBottom="7sp"
                android:onClick="onClickSave"/>
        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_phonebook"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/top"
        android:layout_marginTop="10sp"
        android:background="#00000000">

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/layout_refresh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycleView_phonebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:lines="1"
                android:divider="#FFFF0000"
                android:dividerHeight="10dp"/>

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    </RelativeLayout>






</RelativeLayout>
