<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00000000">

    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:layout_marginTop="3sp"
        android:layout_height="40sp"
        android:layout_marginStart="5sp"
        android:layout_marginEnd="5sp"
        android:background="@drawable/border_transparent">

        <ImageView
            android:id="@+id/imageView_left"
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:background="@drawable/location"
            android:layout_alignParentStart="true"
            android:layout_marginStart="7sp"
            android:layout_marginTop="7sp"/>

        <TextView
            android:id="@+id/textView_location"
            android:layout_height="match_parent"
            android:layout_marginTop="3sp"
            android:textSize="17sp"
            android:layout_marginStart="7sp"
            android:text="@string/defaultPhone"
            android:layout_toEndOf="@id/imageView_left"
            android:gravity="center_vertical"
            android:layout_width="wrap_content" />

        <TextView
            android:id="@+id/textView_weather"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="7sp"
            android:gravity="center_vertical"
            android:textSize="17sp"/>

        <ImageView
            android:id="@+id/imageView_weather"
            android:layout_width="40sp"
            android:layout_height="32sp"
            android:layout_marginTop="5sp"
            android:layout_toStartOf="@id/textView_weather"
            android:layout_marginEnd="7sp"/>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_take_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_transparent"
        android:layout_below="@+id/top"
        android:layout_marginTop="5sp"
        android:layout_marginStart="5sp"
        android:layout_marginEnd="5sp">


        <ImageButton
            android:id="@+id/button_add"
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="7sp"
            android:layout_marginTop="7sp"
            android:layout_marginBottom="7sp"
            android:layout_alignParentTop="true"
            android:background="@drawable/add"/>

        <TextView
            android:id="@+id/textView_add"
            android:layout_width="wrap_content"
            android:layout_height="45sp"
            android:text="@string/add"
            android:layout_toEndOf="@+id/button_add"
            android:gravity="center"
            android:layout_marginStart="15sp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="7sp"/>
        
        <com.example.asc.activity.ui.ImageTextButton
            android:id="@+id/button_space"
            android:layout_width="60sp"
            android:layout_height="60sp"
            android:layout_below="@+id/button_add"
            android:layout_marginTop="13sp"
            android:layout_marginBottom="10sp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="10sp"
            android:gravity="center"
            android:visibility="gone"
            android:onClick="onClickSpace"/>

        <com.example.asc.activity.ui.ImageTextButton
            android:id="@+id/button_record"
            android:layout_width="60sp"
            android:layout_height="60sp"
            android:layout_below="@+id/button_add"
            android:layout_marginTop="13sp"
            android:layout_marginBottom="10sp"
            android:layout_toEndOf="@id/button_space"
            android:layout_marginStart="25sp"
            android:gravity="center"
            android:visibility="gone"
            android:onClick="onClickSpace"/>

        <com.example.asc.activity.ui.ImageTextButton
            android:id="@+id/button_notebook"
            android:layout_width="60sp"
            android:layout_height="60sp"
            android:layout_below="@+id/button_add"
            android:layout_marginTop="13sp"
            android:layout_marginBottom="10sp"
            android:layout_toEndOf="@id/button_record"
            android:layout_marginStart="25sp"
            android:gravity="center"
            android:visibility="gone"/>

        <ImageView
            android:id="@+id/imageView_date"
            android:layout_width="35sp"
            android:layout_height="35sp"
            android:layout_below="@+id/button_add"
            android:layout_marginTop="10sp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="7sp"
            android:background="@drawable/date"
            android:onClick="onClickSpace"/>

        <TextView
            android:id="@+id/textView_date"
            android:layout_width="wrap_content"
            android:layout_height="40sp"
            android:layout_below="@id/button_add"
            android:layout_marginTop="10sp"
            android:layout_toEndOf="@id/imageView_date"
            android:layout_marginStart="10sp"
            android:gravity="center"
            android:textSize="15sp"/>

        <ImageView
            android:id="@+id/imageView_picture"
            android:layout_width="37sp"
            android:layout_height="37sp"
            android:layout_below="@id/imageView_date"
            android:layout_marginTop="10sp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="7sp"
            android:background="@drawable/picture"/>

        <RelativeLayout
            android:id="@+id/layout_camera"
            android:layout_width="140sp"
            android:layout_height="200sp"
            android:background="@drawable/border_dotted"
            android:layout_toEndOf="@id/imageView_picture"
            android:layout_below="@id/textView_date"
            android:layout_marginTop="10sp"
            android:layout_marginStart="10sp"
            android:gravity="center">

            <ImageButton
                android:id="@+id/button_camera"
                android:layout_width="50sp"
                android:layout_height="50sp"
                android:background="@drawable/camera"/>

            <ImageView
                android:id="@+id/imageView_photo"
                android:layout_width="140sp"
                android:layout_height="200sp"
                android:visibility="gone"/>

        </RelativeLayout>

        <ImageView
            android:id="@+id/imageView_note"
            android:layout_width="34sp"
            android:layout_height="34sp"
            android:layout_below="@+id/layout_camera"
            android:layout_marginTop="10sp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="7sp"
            android:background="@drawable/note"/>

        <EditText
            android:id="@+id/editText_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/imageView_note"
            android:layout_below="@id/layout_camera"
            android:layout_marginTop="10sp"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="5sp"
            android:layout_marginBottom="5sp"/>

        <RelativeLayout
            android:id="@+id/layout_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editText_note"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="5sp"
            android:gravity="center">

            <Button
                android:id="@+id/button_submit"
                android:layout_width="120sp"
                android:layout_height="40sp"
                android:background="@drawable/border_blue_transparent"
                android:text="@string/ok"
                android:textSize="20sp"/>
        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layout_recycleView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/layout_take_photo"
        android:layout_marginTop="5sp">

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/layout_refresh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycleView_space"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="#00FFAE"
                android:dividerHeight="10sp"/>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    </RelativeLayout>



</RelativeLayout>
